# perfstat

./: CStick_DD_OBV_UIMW_Diff_UIMW_cache.py  TODO.md  __test_import_modules.ipynb  __test_import_modules.py  concat_df_best_rank.ipynb  concat_pandas_drop_duplicates.ipynb  df_best_rank_2020-12-09  df_n_diff_UI_MW.py  df_n_diff_UI_MW1_.py  df_n_diff_UI_MW2_ends.py  df_n_diff_UI_MW3_ends_query.py  df_trade_results_ranked.ipynb  excel_get_close_n_OBV_slope.ipynb  get_symbol_data_5.py  get_symbol_data_6.py  import pandas_market_calendars as mcal.txt  k12k11_rank.ipynb  old_ps1n2.py  poetry.md  print_n_plot_symbols.py  ps1_df_ps1n2_results.30.py  ps1_df_ps1n2_results.32.py  ps2_df_best_rank.py  ps3_df_trade_results.1.py  ps4_df_trade_results_ranked.2.py  ps5~working.py  ps5~working_.py  ps5~working__1.py  ps5~working__2.py  pyproject.toml  trash.py  ulcer_index_check.ipynb  ulcer_index_test.py  ulcer_index_vectorized.py  util.py  ~test_GitHub.md  ~trash.ipynb  ~trash.py  ~working.ipynb
perfstat/archive/: get_symbol_data_3.py  get_symbol_data_4.py  ps1_df_ps1n1_results.py  ps1_df_ps1n2_results.28.py  ps1_df_ps1n2_results.29.py  ps1_df_ps1n2_results.30.py  ps1n2.27.2_colab.py  ps1n2.27.2_colab_before_black.py  ps2_df_trade_results.py  ps3_df_trade_results_ranked.py  ps3_k12k11_rank.py  ps3_k12k11_rank1.1.py  ps3_k12k11_rank1.py  ps4_k12k11_rank1.2.py  util_.py
tests/: test_perfstat.py
