[tool.poetry]
name = "perfstat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.4"
DateTime = "^4.3"
numpy = "1.19.3"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
plotly = "^4.13.0"
ta-lib = {path = "TA_Lib-0.4.19-cp36-cp36m-win_amd64.whl"}
pandas-market-calendars = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
